<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.editBookDataActivity">
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:textSize="30sp"
      android:textStyle="bold"
      android:textColor="@color/black"
      android:id="@+id/tvTitleOfEdit"
      android:text="@string/edit_book_details"
      android:layout_marginTop="20dp"/>
   <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/tvTitleOfEdit"
        android:layout_marginTop="60dp"
        android:id="@+id/tilBookNameOne"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tetBookNameOne"
            android:background="#BFDFE4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#C88554E8"
            android:hint="@string/enter_book_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tilBookNameOne"
        android:id="@+id/tilBookAuthorNameOne"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tetBookAuthorNameOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BFDFE4"
            android:hint="@string/enter_book_author_name"
            android:textColor="#C88554E8"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilBookAuthorNameOne"
        android:layout_marginTop="40dp"
        android:id="@+id/spinnerGenreEdit"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerGenreEdit"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/select_book_type"
        android:id="@+id/tvTitleOfRadioButtonOne"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleOfRadioButtonOne"
        android:id="@+id/rgFunctionOrNonFunctionalOne"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/functional"
            android:id="@+id/rbFunctionalOne"/>
        <RadioButton
            android:layout_width="match_parent"
            android:id="@+id/rbNonFunctionalOne"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:text="@string/non_functional"/>
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/rgFunctionOrNonFunctionalOne"
        android:id="@+id/tilLaunchDateOne"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tetLaunchDateOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BFDFE4"
            android:hint="@string/enter_date_of_launch"
            android:textColor="#C88554E8"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilLaunchDateOne"
        android:layout_marginTop="40dp"
        android:id="@+id/tvTitleOfCheckBoxOne"
        android:text="@string/select_book_prefer_age_group"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleOfCheckBoxOne"
        android:id="@+id/chbChildrenOne"
        android:textColor="@color/black"
        android:text="@string/children"/>

    <CheckBox
        android:id="@+id/chbYouthOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youth"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/chbChildrenOne"
        app:layout_constraintTop_toTopOf="@id/chbChildrenOne"
        tools:ignore="TouchTargetSizeCheck" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chbAdultOne"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/chbYouthOne"
        app:layout_constraintTop_toTopOf="@id/chbYouthOne"
        android:text="@string/adult"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/chbAdultOne"
        app:layout_constraintTop_toTopOf="@id/chbAdultOne"
        android:textColor="@color/black"
        android:id="@+id/chbSeniorOne"
        android:text="@string/senior"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditBook"
        android:text="@string/edit"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chbYouthOne"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>