<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookScreen"
    android:background="#C88554E8">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideLineStart"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideLineEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/tvTitleOfActivity"
        android:text="@string/for_new_book_add_fill_the_details"
        android:layout_marginTop="50dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toTopOf="@+id/tvTitleOfActivity"
        android:layout_marginTop="60dp"
        android:id="@+id/tilBookName"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tetBookName"
            android:background="#BFDFE4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#C88554E8"
            android:hint="@string/enter_book_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tilBookName"
        android:id="@+id/tilBookAuthorName"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tetBookAuthorName"
            android:layout_width="match_parent"
            android:background="#BFDFE4"
            android:layout_height="match_parent"
            android:textColor="#C88554E8"
            android:hint="@string/enter_book_author_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tilBookAuthorName"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        android:id="@+id/spinnerGenre"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerGenre"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        android:text="@string/select_book_type"
        android:id="@+id/tvTitleOfRadioButton"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tvTitleOfRadioButton"
        android:id="@+id/rgFunctionOrNonFunctional"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/functional"
            android:id="@+id/rbFunctional"/>
        <RadioButton
            android:layout_width="match_parent"
            android:id="@+id/rbNonFunctional"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:text="@string/non_functional"/>
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/rgFunctionOrNonFunctional"
        android:id="@+id/tilLaunchDate"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tetLaunchDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BFDFE4"
            android:textColor="#C88554E8"
            android:hint="@string/enter_date_of_launch" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tilLaunchDate"
        android:layout_marginTop="40dp"
        android:id="@+id/tvTitleOfCheckBox"
        android:text="@string/select_book_prefer_age_group"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tvTitleOfCheckBox"
        android:id="@+id/chbChildren"
        android:textColor="@color/black"
        android:text="@string/children"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:id="@+id/chbYouth"
        app:layout_constraintStart_toEndOf="@id/chbChildren"
        app:layout_constraintTop_toTopOf="@id/chbChildren"
        android:text="@string/youth"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chbAdult"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/chbYouth"
        app:layout_constraintTop_toTopOf="@id/chbYouth"
        android:text="@string/adult"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/chbAdult"
        app:layout_constraintTop_toTopOf="@id/chbAdult"
        android:textColor="@color/black"
        android:id="@+id/chbSenior"
        android:text="@string/senior"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddBook"
        android:text="@string/add_book"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintTop_toBottomOf="@id/chbYouth"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>