<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetails">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="28dp" />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintGuide_end="50dp"
        android:id="@+id/guideLineEnd"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@+id/guideLineStart"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="100dp"
    android:text="@string/book_name"
    android:textSize="20sp"
    android:textStyle="bold"
    android:id="@+id/tvTitleBookName"
    android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvTitleBookName"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleBookName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/book_name"
        android:id="@+id/tvBookName1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tvTitleBookName"
        android:text="@string/author_name"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/tvTitleBookAuthorName"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvTitleBookAuthorName"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleBookAuthorName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/author_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/tvAuthorName1"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tvTitleBookAuthorName"
        android:text="@string/book_genre_type"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/tvTitleBookGenre"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvTitleBookGenre"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleBookGenre"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/tvBookGenre1"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tvTitleBookGenre"
        android:text="@string/book_type"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/tvTitleBookType"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvTitleBookType"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleBookType"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/tvBookType1"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tvTitleBookType"
        android:text="@string/book_launch_date"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/tvTitleBookLaunchDate"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvTitleBookLaunchDate"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleBookLaunchDate"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/tvBookLaunchDate1"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tvBookLaunchDate1"        android:text="@string/book_for_age_group"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/tvAgePreferBookTitle"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvAgePreferBookTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvAgePreferBookTitle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/tvBookAgeGroupPrefer"
        android:textColor="@color/black"/>



</androidx.constraintlayout.widget.ConstraintLayout>